fix: bags notification on mobile adaptive

--- a/src/contentscript/overlay/root/pages/Notifications/Notifications.module.scss
+++ b/src/contentscript/overlay/root/pages/Notifications/Notifications.module.scss
@@ -64,8 +64,8 @@
 
 .noNot {
   position: absolute;
-  top: 0;
-  left: 0;
+  // top: 0;
+  // left: 0;
   width: 100%;
   height: 100%;
   display: flex;
